[gd_scene load_steps=11 format=2]

[ext_resource path="res://globals/SoundsManager.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/telephone-ring-04.wav.sample" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/click-snap-perc.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/car_starting_sound.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/news.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/knock-door-step.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/pasillo.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/dentro_del_cuarto.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/door-open.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/room_news_SP.ogg" type="AudioStream" id=10]

[node name="AudioManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
phone = ExtResource( 2 )
pressnext = ExtResource( 3 )
news = ExtResource( 5 )
car_starting = ExtResource( 4 )
door_in = ExtResource( 6 )
room_foley = ExtResource( 8 )
hallway_foley = ExtResource( 7 )
door_out = ExtResource( 9 )
news_room_SP = ExtResource( 10 )

[node name="SfxPlayer" type="AudioStreamPlayer" parent="."]

[node name="BackgroundPlayer" type="AudioStreamPlayer" parent="."]

[node name="Transition" type="AudioStreamPlayer" parent="."]

[node name="SoundFadeTween" type="Tween" parent="."]

[connection signal="finished" from="Transition" to="." method="_on_AudioStreamPlayer2D_finished"]
